--- a/partials/nav-bar.html
+++ b/partials/nav-bar.html
@@ -1,6 +1,6 @@
 <nav>
-  <a ui-sref="parent.viewOne" ui-sref-active="active">One</a>
-  <a ui-sref="parent.viewTwo" ui-sref-active="active">Two</a>
-  <a ui-sref="parent.viewThree" ui-sref-active="active">Three</a>
-  <a ui-sref="parent" ui-sref-active="active">Parent</a>
+  <a ui-sref="parent">Home</a>
+  <a ui-sref="parent.viewOne" ui-sref-active="active">Search</a>
+  <a ui-sref="parent.viewTwo" ui-sref-active="active">Saved</a>
+  <a ui-sref="parent.viewThree" ui-sref-active="active">Favorites</a>
 </nav>
